WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109323
[Mac] In-band closed caption tracks are not always initialized correctly
https://bugs.webkit.org/show_bug.cgi?id=109323
Summary
[Mac] In-band closed caption tracks are not always initialized correctly
Eric Carlson
Reported
2013-02-08 13:51:29 PST
A logic error can cause an in-band closed caption track to be disabled inadvertently.
Attachments
Proposed patch
(6.14 KB, patch)
2013-02-08 16:17 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2013-02-08 16:17:33 PST
Created
attachment 187382
[details]
Proposed patch
Eric Carlson
Comment 2
2013-02-08 17:35:45 PST
Committed
http://trac.webkit.org/r142334
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug