[Mac] In-band closed caption tracks are not always initialized correctly https://bugs.webkit.org/show_bug.cgi?id=109323

Reviewed by Dean Jackson.

No new tests, makes existing tests less flakey.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayerItem): Create and configure legible output
    here instad of in tracksChanged.
(WebCore::MediaPlayerPrivateAVFoundationObjC::setClosedCaptionsVisible): Do nothing in a build with
    in-band track support.
(WebCore::MediaPlayerPrivateAVFoundationObjC::tracksChanged): Move legible output creation to
    createAVPlayerItem, don't set look at track media type to see if the movie has captions
    when we have support for in-band captions.


Canonical link: https://commits.webkit.org/127575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142334 268f45cc-cd09-0410-ab3c-d52691b4dbfc